# agentic_rag

./: .dockerignore  .env.template  .gitignore  Dockerfile.app  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 057a3e979a93_create_core_tables.py  7b8c2f1d4a6e_add_bm25_indexing_status_to_chunks.py  9f2a6c1e8b43_add_query_runs.py  c4d7a2f9b8e1_add_request_id_to_query_runs.py  e6b4d7a1c9f2_add_ingestion_job_leases.py
docs/: ARCHITECTURE.md  LOW_LEVEL_DESIGN.md  NEXT_SPRINT.md
scripts/: seed_local_db.py
src/agentic_rag/: main.py
src/agentic_rag/api/: __init__.py  documents.py  health.py  query.py  retrieval.py
src/agentic_rag/core/: auth.py  authorization.py  dependencies.py
src/agentic_rag/llm/: circuit_breaker.py  gateway.py
src/agentic_rag/query/: answer_verifier.py  bm25_query.py
src/agentic_rag/retrieval/: bm25_search.py  context_builder.py  hybrid_search.py  reranker.py  vector_search.py
src/agentic_rag/search/: opensearch.py
src/agentic_rag/shared/: __init__.py  config.py
src/agentic_rag/storage/: object_store.py
src/agentic_rag/workers/: embedding.py  indexing.py  ingestion.py
tests/unit/api/: __init__.py  test_documents.py  test_health.py  test_query.py  test_retrieval.py
tests/unit/core/: test_auth.py  test_authorization.py
tests/unit/llm/: test_gateway.py
tests/unit/query/: test_answer_verifier.py  test_bm25_query.py
tests/unit/retrieval/: test_bm25_search.py  test_context_builder.py  test_hybrid_search.py  test_reranker.py  test_vector_search.py
(+42 files in other folders)
