[tool.poetry]
name = "agentic-rag"
version = "0.1.0"
description = "Production-ready Agentic RAG system for large-scale datasets"
authors = ["Mithlesh Upadhyay <mithleshupadhyay515@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.47.0"}
pydantic-settings = "^2.14.1"
python-dotenv = "^1.2.2"
pydantic = "^2.13.4"
prometheus-fastapi-instrumentator = "^7.1.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
psycopg = {extras = ["binary"], version = "^3.3.4"}
pgvector = "^0.4.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
boto3 = "^1.43.14"
httpx = "^0.28.1"
python-multipart = "^0.0.29"
litellm = "^1.86.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.14"
mypy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
